{
    "name": "IAA_Player",
    "maps": [
        {
            "name": "HidingPlayer",
            "id": "a7a8ea72-8256-4f93-92e4-e5e082cdfd3c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8c99df81-a280-4ea5-a579-e60111852c11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TakeObject",
                    "type": "Button",
                    "id": "023f44f0-7e91-4c18-a0aa-26d662086bf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2269bd24-e869-41a3-ab26-fa2d5084bfa2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e13676fc-0e53-4c7a-accc-29040f0b2131",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8cb8daec-413f-484e-9ef3-caf048142c42",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85131edb-aa11-4acf-8f32-8a0b780a5f03",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "99eec2d5-fb39-4957-ab59-03e2342652f4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7eed85bf-9c8c-423d-a0ea-24cf392adf8a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SearchPlayer",
            "id": "fa35d032-7f2c-438d-9ffe-af32898b554e",
            "actions": [
                {
                    "name": "ChooseCharacter",
                    "type": "Button",
                    "id": "faa6d9a8-a5c8-42b9-82c6-931d14ba7f3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32c77999-24ef-4eb4-be64-3460ea778339",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}